fix navbar actions on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
 @import "./base.scss";
-@import url("https://fonts.googleapis.com/css2?family=Diphylleia&family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=VT323&family=Sono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=VT323&family=Sono&family=Play&display=swap");
 @import "./variables.scss";
 @import "./mixins.scss";
 
@@ -550,9 +550,7 @@ footer {
       }
     }
 
-    span {
-      // display: none;
-
+    span.name {
       @include media(xsmallScreen) {
         display: none;
       }
@@ -684,6 +682,7 @@ footer {
 }
 
 .avatarLink {
+  font-family: "Play";
   height: fit-content;
   margin: auto 0;
   line-height: 1;
@@ -698,8 +697,6 @@ footer {
   // flex-grow: 1;
   margin-right: 4px;
   font-weight: bold;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
   align-items: center;
   font-size: 1.2em;
